--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,7 @@
 .cover__link {
   position: relative;
   min-height: 740px;
-  background-image: url(../images/cover-trains.jpg);
+  background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
